--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               class="events__image"
             />
             <div class="person person_name_feynman">
-              <p class="person__capton">Joan Feynman</p>
+              <p class="person__caption">Joan Feynman</p>
               <img
                 src="/images/person_feynman.png"
                 alt="rosto da Joan Feyman"
@@ -190,20 +190,21 @@
             </div>
 
             <div class="person person_name_burbidge">
-              <p class="person__capton">Margaret Burbidge</p>
+              <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="/images/person_burbidge.png"
                 alt="rosto da Burbidge"
                 class="person__image person__image_size_m"
               />
             </div>
+
             <div class="person person_name_cannon">
               <img
                 src="/images/person_cannon.png"
                 alt="rosto da Annie Cannon"
                 class="person__image person__image_size_m"
               />
-              <p class="person__capton">Annie Jump Cannon</p>
+              <p class="person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
               <img
@@ -211,10 +212,10 @@
                 alt="rosto da Maria Mitchell"
                 class="person__image person__image_size_s"
               />
-              <p class="person__capton">Maria Mitchell</p>
+              <p class="person__caption">Maria Mitchell</p>
             </div>
             <div class="person person_name_tarter">
-              <p class="person__capton">Jill Tarte</p>
+              <p class="person__caption">Jill Tarte</p>
               <img
                 src="/images/person_tarter.png"
                 alt="rosto da Tarte"
