Updat HTML and CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav__link" href="#membership">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -283,7 +283,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="footer__columns">
           <div class="footer__column">
             <img
