Updat HTML and CSS

--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@
             </ul>
           </div>
         </div>
-        <div class="footer__copyright">
-          <p>&copy; 2025 Franklyn Vignny</p>
-        </div>
+
+        <p class="footer__copyright">&copy; 2025 Franklyn Vignny</p>
       </footer>
     </div>
   </body>
